# Lexi

./: CONTRIBUTING.md  CROWN_SIGMA_ASYMPTOTICS.md  Cargo.toml  IMPLEMENTATION_PLAN.md  INSTALL.md  LEX7_TODO.md  README.md  axiom_crucible_roadmap.md  create_dirs.bat  install_deps.bat  install_torch.bat  main.rs  optimize.sh  pyrightconfig.json  run_test.bat  setup_venv.bat  structure.md  tauri.conf.json
glass-monolith/: README.md
glass-monolith-ui/: Cargo.toml
glass-monolith-ui/frontend/: index.html  package.json  vite.config.ts
glass-monolith-ui/frontend/src/: App.css  App.tsx  layout.css  main.tsx
glass-monolith-ui/frontend/src/components/: DirectiveStream.tsx  Lattice.tsx  NodeHUD.tsx  SystemStatus.tsx  VectorInput.tsx
glass-monolith-ui/src/: main.rs
glass-monolith/src-tauri/: Cargo.toml  tauri.conf.json
glass-monolith/src-tauri/src/: bark_kernel.rs  lex_bridge.rs  main.rs
glass-monolith/src-ui/: App.tsx  index.css
glass-monolith/src-ui/components/: CommandVector.tsx  LatticeView.tsx  ProofCard.tsx
lex7/: requirements.txt
lex7/config/: lex_config.yaml
lex7/data/: sample_directive_1.json
lex7/models/: node_state.pt
lex7/src/: lex_node.py  test_lex_node.py  train_lex.py
lex7_architecture/: axiom-crucible-config.json  demo_lex7_system.py  pyrightconfig.json  requirements.txt
lex7_architecture/config/: lex_config.yaml
lex7_architecture/docs/: CRUCIBLE_SPEC.md
lex7_architecture/scripts/: setup_environment.py
lex7_architecture/src/communication/: bark_protocol.py  crypto_signing.py  zenoh_p2p.py
lex7_architecture/src/core/: error_model.py  lex_mamba_kernel.py  lex_node.py
lex7_architecture/src/nodes/: __init__.py  lex_router.py  lex_vitality.py  lex_wealth.py
lex7_architecture/stubs/mamba_ssm/: __init__.pyi
nodes/lex-crt/: Cargo.toml
nodes/lex-crt/src/: main.rs
nodes/lex-ent/: Cargo.toml
nodes/lex-ent/src/: main.rs
nodes/lex-grw/: Cargo.toml
nodes/lex-grw/src/: main.rs
nodes/lex-kin/: Cargo.toml
nodes/lex-kin/src/: main.rs
nodes/lex-kno/: Cargo.toml
nodes/lex-kno/src/: main.rs
nodes/lex-leg/: Cargo.toml
nodes/lex-leg/src/: main.rs
nodes/lex-lei/: Cargo.toml
nodes/lex-lei/src/: main.rs
nodes/lex-mon/: Cargo.toml
nodes/lex-mon/src/: main.rs
nodes/lex-ord/: Cargo.toml
nodes/lex-ord/src/: main.rs
nodes/lex-out/: Cargo.toml
nodes/lex-out/src/: main.rs
nodes/lex-san/: Cargo.toml
nodes/lex-san/src/: main.rs
nodes/lex-vit/: Cargo.toml
nodes/lex-vit/src/: main.rs
nodes/lex-wth/: Cargo.toml
nodes/lex-wth/src/: main.rs
shared/communication/: Cargo.toml
shared/communication/src/: lib.rs
shared/state/: Cargo.toml
shared/state/src/: lib.rs
tests/: inter_node_communication_test.rs
