[package]
name = "lex-lei"
version = "0.1.0"
edition = "2021"

[dependencies]
# Communication and state management
shared = { path = "../shared" }
tokio = { version = "1.0", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
anyhow = "1.0"
tracing = "0.1"
tracing-subscriber = "0.3"

# Cryptography
ed25519-dalek = { version = "2.0", features = ["rand_core"] }
rand = "0.8"

# HTTP server
axum = "0.7"
tower = "0.4"
tower-http = { version = "0.5", features = ["cors"] }
hyper = "1.0"

[dev-dependencies]
tempfile = "3.0"
