[package]
name = "lex-mon"
version = "1.0.0"
edition = "2021"

[dependencies]
bark-protocol = { path = "../../shared/communication" }
serde_json = "1.0"
chrono = { version = "0.4", features = ["serde"] }
tokio = { version = "1.0", features = ["full"] }
uuid = { version = "1.0", features = ["v4", "serde"] }
reqwest = { version = "0.11", features = ["json"] }
lazy_static = "1.4"
ed25519-dalek = { version = "2.0", features = ["serde"] }
rand = "0.8"
