[package]
name = "bark-protocol"
version = "3.1.0"
edition = "2021"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1.0", features = ["v4", "serde"] }
ed25519-dalek = "2.0"
rand = "0.8"

[features]
default = []
verification = ["ed25519-dalek"]